# majak

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.appveyor/: build.bat
.travis/: build.sh
cmake/: GetGitVersionInfo.cmake  RE2CTarget.cmake  README.md  inline.cmake  utils.cmake
include/ninja/: build.h  build_log.h  clean.h  disk_interface.h  eval_env.h  filesystem.h  graph.h  line_printer.h  manifest_parser.h  ninja.h  ninja_config.in.h  state.h  timestamp.h  util.h  version.h
misc/zsh-completion/: _majak
src/: browse.cc  browse.h  build.cc  build.h  build_log.cc  build_log.fbs  build_log.h  build_log_generated.h  build_log_perftest.cc  build_log_test.cc  build_test.cc  canon_bench.cc  canon_perftest.cc  clean.cc  clean.h  clean_test.cc  clparser.cc  clparser.h  clparser_perftest.cc  clparser_test.cc  debug_flags.h  depfile_parser.cc  depfile_parser.h  depfile_parser.in.cc  depfile_parser_perftest.cc  depfile_parser_test.cc  deps_log.cc  deps_log.h  deps_log_test.cc  disk_interface.cc  disk_interface.h  disk_interface_test.cc  edit_distance.cc  edit_distance.h  edit_distance_test.cc  eval_env.cc  eval_env.h  exit_status.h  filesystem.h  graph.cc  (+59 more)
src/getopt/: getopt.h
src/lib/: browse.cc  build.cc  build_log.cc  clean.cc  clparser.cc  debug_flags.cc  disk_interface.cc  eval_env.cc  graph.cc  graphviz.cc  includes_normalize-win32.cc  includes_normalize.h  lexer.cc  lexer.in.cc  line_printer.cc  manifest_parser.cc  message.cc  metrics.cc  minidump-win32.cc  msvc_helper-win32.cc  msvc_helper_main-win32.cc  ninja.cc  state.cc  string_piece_util.cc  subprocess-posix.cc  subprocess-win32.cc  util.cc  version.cc
src/main/: majak_main.cc  ninja_main.cc
src/tests/: build_log_perftest.cc  build_log_test.cc  build_test.cc  canon_perftest.cc  clean_test.cc  clparser_perftest.cc  clparser_test.cc  depfile_parser_perftest.cc  depfile_parser_test.cc  deps_log_test.cc  disk_interface_test.cc  graph_test.cc  hash_collision_bench.cc  includes_normalize_test.cc  lexer_test.cc  manifest_parser_perftest.cc  manifest_parser_test.cc  message_test.cc  msvc_helper_test.cc  state_test.cc  subprocess_test.cc  test.cc  test.h  util_test.cc
